First try cu121 as extra (#193)
Removed cu118 due to errors in installation caused by wrong linking with CUDA so objects.
Reworked pyproject toml to correctly retrieve DGL wheels for specific version.
Moved cpu, cu121, cu124 from dependency groups to optional dependencies.

The last modification enables installing hopwise directly from pip/uv pip as follows:
```bash
uv pip install "git+https://github.com/tail-unica/hopwise[cu121]"
```

* First try cu121 as extra

* Second try cuda/cpu as extra

* Reworked pyproject.toml

* Removed cu118

* Removed cu118

--- a/.github/workflows/sync_and_test.yml
+++ b/.github/workflows/sync_and_test.yml
@@ -30,20 +30,17 @@ jobs:
       # Sync pipeline
       - name: Install the project
         run: |
-          uv sync --group ${{ inputs.env }}
+          uv sync --extra ${{ inputs.env }}
 
       - if: ${{ inputs.env == 'cu124' }}
         run: |
           uv pip install torch-scatter -f https://data.pyg.org/whl/torch-2.4.0+cu124.html
-      - if: ${{ inputs.env == 'cpu' }}
-        run: |
-          uv pip install torch-scatter -f https://data.pyg.org/whl/torch-2.4.0+cpu.html
-      - if: ${{ inputs.env == 'cu118' }}
-        run: |
-          uv pip install torch-scatter -f https://data.pyg.org/whl/torch-2.4.0+cu118.html
       - if: ${{ inputs.env == 'cu121' }}
         run: |
           uv pip install torch-scatter -f https://data.pyg.org/whl/torch-2.3.1+cu121.html
+      - if: ${{ inputs.env == 'cpu' }}
+        run: |
+          uv pip install torch-scatter -f https://data.pyg.org/whl/torch-2.4.0+cpu.html
 
       # Testing pipeline
       - name: Test Overall
