Add Hopwise CLI with click and rich
run_hopwise.py, run_hopwise_group.py, and run_hyper.py are all replaced by the hopwise/cli.py, which uses click and rich for cleaner outputs. Rich has also been used to replace tqdm with tqdm.rich which shows cooler progress bars (TODO: need to be tests in jupyter). Without the entry points file, hopwise can be run in two ways. If cloned the CLI can be used with simply , if installed, an automatic hopwise executable should be created and the same functionality should work without using uv run or python directly (need to be tested)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,7 @@ path = "hopwise/__init__.py"
 "run_hopwise_group.py" = "hopwise/run_hopwise_group.py"
 
 [project.scripts]
-hopwise = "hopwise.run_hopwise:main"
-hopwise_group = "hopwise.run_hopwise_group:main"
+hopwise = "hopwise.cli:cli"
 
 [project]
 name = "hopwise"
@@ -132,6 +131,10 @@ cu124 = [
   "torch==2.4.*",
   "dgl",
 ]
+cli = [
+  "click>=8.0.0",
+  "rich>=12.0.0",
+]
 
 [dependency-groups]
 docs = [
@@ -147,8 +150,7 @@ lint = [
   "pre-commit"
 ]
 dev = [
-  "hopwise[all-models]",
-  "hopwise[hyper]",
+  "hopwise[all-models,hyper,cli]",
   "plotly",
   "opentsne",
   "nbformat",
