--- a/hopwise/properties/overall.yaml
+++ b/hopwise/properties/overall.yaml
@@ -15,6 +15,7 @@ dataloaders_save_path: ~        # (str) The path of saved dataloaders.
 log_wandb: False                # (bool) Whether or not to use Weights & Biases(W&B).
 wandb_project: 'hopwise'        # (str) The project to conduct experiments in W&B.
 shuffle: True                   # (bool) Whether or not to shuffle the training data before each epoch.
+weight_precision: float32
 
 # Training Settings
 epochs: 300                     # (int) The number of training epochs.
