--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
-recursive-include recbole/properties *
-recursive-include recbole/dataset_example *
+recursive-include hopwise/properties *
+recursive-include hopwise/dataset_example *
+recursive-include hopwise *.yaml
