--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,4 +20,4 @@ jobs:
     - id: deployment
       uses: sphinx-notes/pages@v3
       with:
-        documentation_path: .
+        documentation_path: docs
