--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,3 +21,4 @@ jobs:
       uses: sphinx-notes/pages@v3
       with:
         documentation_path: docs/source
+        requirements_path: docs/requirements.txt
