--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -12,37 +12,27 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        env: [cu121]
+        env: [cuda]
         python-version: ["3.10"]
         experimental_or_skip_heavy_tests: [false]
         include:
           - os: ubuntu-latest
-            env: cu121
+            env: cuda
             python-version: "3.12"
             experimental_or_skip_heavy_tests: true
 
           - os: ubuntu-latest
-            env: cu121
+            env: cpu
+            python-version: "3.10"
+            experimental_or_skip_heavy_tests: true
+
+          - os: ubuntu-latest
+            env: cuda
             python-version: "3.9"
             experimental_or_skip_heavy_tests: true
 
-          - os: ubuntu-latest
-            env: cu124
-            python-version: "3.11"
-            experimental_or_skip_heavy_tests: true
-
-          - os: ubuntu-latest
-            env: cu124
-            python-version: "3.10"
-            experimental_or_skip_heavy_tests: true
-
-          - os: ubuntu-latest
-            env: cpu
-            python-version: "3.10"
-            experimental_or_skip_heavy_tests: true
-
           - os: windows-latest
-            env: cpu
+            env: cuda
             python-version: "3.10"
             experimental_or_skip_heavy_tests: true
 
