--- a/.github/workflows/sync_and_test.yml
+++ b/.github/workflows/sync_and_test.yml
@@ -26,6 +26,7 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ inputs.python-version }}
+          enable-cache: true
 
       # Sync pipeline
       - name: Install the project
