--- a/hopwise/properties/model/KGGLM.yaml
+++ b/hopwise/properties/model/KGGLM.yaml
@@ -4,23 +4,20 @@ warmup_steps: 250               # (int) Number of warmup steps for learning rate
 embedding_size: 768             # (int) Size of the embeddings.
 num_heads: 12                   # (int) Number of heads in the multi-head attention.
 num_layers: 6                   # (int) Number of layers in the transformer.
+use_kg_token_types: True        # (bool) Whether to use token types for the knowledge graph.
+
 save_step: 50                   # (int) Number of steps to save the model during pre-training.
-pretrain_epochs: 1            # (int) Number of epochs for pre-training.
-train_stage: 'pretrain'      # (str) The training stage. Range in ['pretrain', 'finetune'].
+pretrain_epochs: 1              # (int) Number of epochs for pre-training.
+train_stage: 'pretrain'         # (str) The training stage. Range in ['pretrain', 'finetune'].
 pre_model_path: ''              # (str) The path of pretrained model.
-ranker: BeamSearchSequenceScoreRanker # one of ['SampleSearchSequenceScoreRanker', 'BeamSearchSequenceScoreRanker', 'CumulativeSequenceScoreRanker']
+
 base_model: distilgpt2
+ranker: BeamSearchSequenceScoreRanker # one of ['SampleSearchSequenceScoreRanker', 'BeamSearchSequenceScoreRanker', 'CumulativeSequenceScoreRanker']
+
 path_sample_args:
     restrict_by_phase: False    # (bool) Whether to restrict the last item in the reasoning path by the used ids in the dataloader phase.
     pretrain_hop_length: (3,3)  # (tuple) The range of the hop length for pre-training.
-    pretrain_paths: 1          # (int) Number of paths for pre-training. i.e. how many paths per entity?
+    pretrain_paths: 1           # (int) Number of paths for pre-training. i.e. how many paths per entity?
+    temporal_causality: False
     strategy: simple-ui
     MAX_RW_TRIES_PER_IID: 1     # (int) Maximum number of tries per positive item (during pretraining applies per entity).
-
-path_generation_args:
-    paths_per_user: 10          # (int) Number of paths generated per user.
-    num_beams: 10           # (int) Number of beams for beam search.
-    num_beam_groups: 5      # (int) Number of groups for diverse beam search.
-    diversity_penalty: 0.3  # (float) Diversity penalty for beam search.
-    length_penalty: 0.0     # (float) Length penalty for beam search.
-    do_sample: False        # (bool) Whether to use sampling ; use greedy decoding otherwise.
