--- a/hopwise/properties/model/PEARLM.yaml
+++ b/hopwise/properties/model/PEARLM.yaml
@@ -4,18 +4,12 @@ warmup_steps: 250               # (int) Number of warmup steps for learning rate
 embedding_size: 768             # (int) Size of the embeddings.
 num_heads: 12                   # (int) Number of heads in the multi-head attention.
 num_layers: 6                   # (int) Number of layers in the transformer.
+use_kg_token_types: True        # (bool) Whether to use token types for the knowledge graph.
+
 base_model: distilgpt2
 ranker: BeamSearchSequenceScoreRanker # one of ['SampleSearchSequenceScoreRanker', 'BeamSearchSequenceScoreRanker', 'CumulativeSequenceScoreRanker']
-use_kg_token_types: True        # (bool) Whether to use token types for the knowledge graph.
+
 MAX_PATHS_PER_USER: 1
 path_sample_args:
-    restrict_by_phase: False    # (bool) Whether to restrict the last item in the reasoning path by the used ids in the dataloader phase.
-    MAX_CONSECUTIVE_INVALID: 1
-    MAX_RW_TRIES_PER_IID: 1
-path_generation_args:
-    paths_per_user: 30          # (int) Number of paths generated per user.
-    num_beams: 50           # (int) Number of beams for beam search.
-    num_beam_groups: 5      # (int) Number of groups for diverse beam search.
-    diversity_penalty: 0.3  # (float) Diversity penalty for beam search.
-    length_penalty: 0.0     # (float) Length penalty for beam search.
-    do_sample: False        # (bool) Whether to use sampling ; use greedy decoding otherwise.
+    temporal_causality: False
+    strategy: simple-ui
