--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ authors = [
     { name = "Alessandro Soccol", email = "alessandrosoccol@gmail.com" },
 ]
 readme = "README.md"
-requires-python = ">=3.9,<=3.12"
+requires-python = ">=3.9,<3.13"
 license = { file = "LICENSE" }
 dynamic = ["version"]
 keywords = [
@@ -55,15 +55,13 @@ classifiers = [
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-  "numpy>=2.0.0",
-  "pandas>2.0.0",
+  "numpy>=2.0.0; python_version >= '3.10'",
+  "numpy<=1.24.4; python_version < '3.10'",
+  "pandas>2.0.0; python_version >= '3.10'",
+  "pandas>1.3.0, <2.0.3; python_version < '3.10'",
   "torch>=2.5.0",
-  "transformers",
-  "accelerate>=0.34.2",
-  "datasets",
   "tqdm",
   "wandb",
-  "igraph",
   "colorama>=0.4.4",
   "scipy>=1.12.0",
   "thop",
@@ -73,19 +71,24 @@ dependencies = [
   "texttable",
   "colorlog>=4.7.2",
   "protobuf==3.20.*",
-  "joblib",
-  "numba",
   "scikit-learn",
   "rich",
   "cachetools",
 ]
 
 [project.optional-dependencies]
+pathlm = [
+  "transformers",
+  "datasets",
+  "igraph",
+  "joblib",
+  "numba",
+]
 ldiffrec = [
   "kmeans-pytorch"
 ]
 nncf = [
-  "community",
+  "networkx",
   "python-louvain"
 ]
 ncl = [
@@ -100,22 +103,28 @@ xgboost = [
 kgat = [
   "dgl>=2.4.0"
 ]
-# kgin = [
+# scatter = [
 #   "torch-scatter",
 # ]
 hyper = [
   "hyperopt==0.2.5",
   "optuna",
-  "ray[tune]"
+  "ray[tune]",
+  "plotly"
+]
+tsne = [
+  "plotly",
+  "opentsne",
 ]
 all-models = [
-  "hopwise[nncf]",
-  "hopwise[xgboost]",
-  "hopwise[ncl]",
-  "hopwise[lightgbm]",
+  "hopwise[pathlm]",
   "hopwise[ldiffrec]",
+  "hopwise[ncl]",
+  "hopwise[nncf]",
+  "hopwise[lightgbm]",
+  "hopwise[xgboost]",
   "hopwise[kgat]",
-  # "hopwise[kgin]",
+  # "hopwise[scatter]",
 ]
 cli = [
   "click>=8.0.0",
@@ -136,10 +145,7 @@ lint = [
   "pre-commit"
 ]
 dev = [
-  "hopwise[all-models,hyper,cli]",
-  "plotly",
-  "opentsne",
-  "nbformat",
+  "hopwise[all-models,hyper,cli,tsne]",
   {include-group = "docs"},
   {include-group = "test"},
   {include-group = "lint"},
@@ -204,6 +210,7 @@ ignore = [
     "UP031", # TEMPORARY: Use format specifiers instead of percent format
     "PLR0915", # TEMPORARY: Too many statements
     "PLR0912", # TEMPORARY: Too many branches
+    "PLC0415", # import should be at the top-level of a file
 ]
 fixable = ["ALL"]
 
