--- a/.github/workflows/pypi_release.yml
+++ b/.github/workflows/pypi_release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   release:
-    types: [published]
+    types: [edited, published]
 
 jobs:
   pypi:
@@ -17,7 +17,7 @@ jobs:
       - uses: astral-sh/setup-uv@v6
       - run: uv build
       - name: Smoke test (wheel)
-        run: uv run --isolated --no-project -p 3.11 --with dist/*.whl tests/test_smoke.py
+        run: uv run -n --isolated --no-project -p 3.11 --with dist/*.whl tests/test_smoke.py
       - name: Smoke test (source distribution)
-        run: uv run --isolated --no-project -p 3.11 --with dist/*.tar.gz tests/test_smoke.py
+        run: uv run -n --isolated --no-project -p 3.11 --with dist/*.tar.gz tests/test_smoke.py
       - run: uv publish --trusted-publishing always
