--- a/hopwise/properties/quick_start_config/knowledge_path_base.yaml
+++ b/hopwise/properties/quick_start_config/knowledge_path_base.yaml
@@ -28,7 +28,7 @@ tokenizer:                                  # (dict) Tokenizer parameters.
     model: WordLevel                        # (str) Tokenizer model.
 
 path_generation_args:
-    paths_per_user: 10          # (int) Number of paths generated per user.
+    num_return_sequences: 10    # (int) Number of paths generated per user.
     num_beams: 20               # (int) Number of beams for beam search.
     num_beam_groups: 5          # (int) Number of groups for diverse beam search.
     diversity_penalty: 0.3      # (float) Diversity penalty for beam search.
