Partial explain API for LMs, TODO ExpCollector

--- a/hopwise/properties/model/PEARLMLlama3.yaml
+++ b/hopwise/properties/model/PEARLMLlama3.yaml
@@ -7,7 +7,7 @@ rope_config: ~
 num_kv_groups: 8
 
 base_model: llama3
-ranker: SampleSearchSequenceScoreRanker
+sequence_postprocessor: SampleSearchSequenceScoreRanker
 
 ### PATH SAMPLING PROCESS ###
 MAX_PATHS_PER_USER: 1
