--- a/hopwise/properties/model/PEARLMGPT2.yaml
+++ b/hopwise/properties/model/PEARLMGPT2.yaml
@@ -6,7 +6,7 @@ dropout: 0.1
 bias: True
 
 base_model: gpt2
-sequence_postprocessor: SampleSearchSequenceScorePostProcessor
+sequence_postprocessor: SampleSearch
 
 ### PATH SAMPLING PROCESS ###
 MAX_PATHS_PER_USER: 1
