--- a/.github/workflows/sync_and_test.yml
+++ b/.github/workflows/sync_and_test.yml
@@ -41,26 +41,28 @@ jobs:
           uv pip install torch-scatter -f https://data.pyg.org/whl/torch-2.7.0+cpu.html
 
       # Testing pipeline
-      - name: Test Overall
+      # TODO: add pytest-cov to generate coverage reports with Full Test
+      - name: Full Test
         if: ${{ inputs.experimental_or_skip_heavy_tests == false && inputs.os == 'ubuntu-latest' }}
         run: |
-          uv run -m pytest -v -n auto tests/config/test_overall.py
+          uv run -m pytest -v -n auto tests
       - name: Test Config
+        if: ${{ inputs.experimental_or_skip_heavy_tests != false || inputs.os != 'ubuntu-latest' }}
         run: |
           uv run -m pytest -v -n auto tests/config/test_config.py
       - name: Test metrics
+        if: ${{ inputs.experimental_or_skip_heavy_tests != false || inputs.os != 'ubuntu-latest' }}
         run: |
           uv run -m pytest -v -n auto tests/metrics
       - name: Test data
+        if: ${{ inputs.experimental_or_skip_heavy_tests != false || inputs.os != 'ubuntu-latest' }}
         run: |
           uv run -m pytest -v -n auto tests/data
       - name: Test evaluation_setting
+        if: ${{ inputs.experimental_or_skip_heavy_tests != false || inputs.os != 'ubuntu-latest' }}
         run: |
           uv run -m pytest -v -n auto tests/evaluation_setting
-      - name: Test model
-        if: ${{ inputs.experimental_or_skip_heavy_tests == false && inputs.os == 'ubuntu-latest' }}
-        run: |
-          uv run -m pytest -v tests/model/test_model_auto.py
       - name: Test hyper_tuning
+        if: ${{ inputs.experimental_or_skip_heavy_tests != false || inputs.os != 'ubuntu-latest' }}
         run: |
           uv run -m pytest -v tests/hyper_tuning/test_hyper_tuning.py
