--- a/tests/model/test_model.yaml
+++ b/tests/model/test_model.yaml
@@ -22,6 +22,7 @@ ITEM_LIST_LENGTH_FIELD: item_length
 LIST_SUFFIX: _list
 MAX_ITEM_LIST_LENGTH: 50
 POSITION_FIELD: position_id
+AUGMENT_ITEM_SEQ: True
 # Knowledge-based Model Needed
 HEAD_ENTITY_ID_FIELD: head_id
 TAIL_ENTITY_ID_FIELD: tail_id
