--- a/hopwise/properties/model/PGPR.yaml
+++ b/hopwise/properties/model/PGPR.yaml
@@ -3,14 +3,14 @@ state_history: 1
 max_acts: 250
 gamma: 0.99
 action_dropout: 0.0
-hidden_sizes: [256,128]
+hidden_sizes: [512,256]
 max_path_len: 3
 weight_factor: 1e-3
 beam_search_hop: [25,5,1]
 fix_scores_sorting_bug: False
-learning_rate: 1e-4
-
-
+epochs: 50
+eval_step: 50
+data_path: /home/recsysdatasets
 # The kge embeddings necessary to score paths
 additional_feat_suffix: [useremb, entityemb, relationemb]
 
