fixed a bug that caused the use of the same logging file in case of multiple models or datasets

--- a/hopwise/properties/overall.yaml
+++ b/hopwise/properties/overall.yaml
@@ -21,6 +21,7 @@ shuffle: True                   # (bool) Whether or not to shuffle the training 
 weight_precision: float32
 benchmark_filename: ~
 benchmark_item_filename: ~
+proc_title: ~
 
 # Training Settings
 epochs: 300                     # (int) The number of training epochs.
