--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,8 +75,6 @@ dependencies = [
   "scikit-learn",
   "rich",
   "cachetools",
-  "torch-scatter>=2.1.2",
-  "torch-geometric>=2.6.1",
 ]
 
 [project.optional-dependencies]
@@ -103,8 +101,9 @@ lightgbm = [
 xgboost = [
   "xgboost"
 ]
-kgat = ["dgl"]
-
+kgat = [
+  "dgl>=2.4.0"
+]
 # scatter = [
 #   "torch-scatter",
 # ]
@@ -170,6 +169,8 @@ commands = [
 [tool.uv]
 find-links = [
   "https://data.pyg.org/whl/torch-2.4.0+cu124.html",
+  "https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html",
+  "https://data.dgl.ai/wheels/torch-2.4/repo.html",
   "https://data.dgl.ai/wheels/cu121/repo.html",
   "https://data.dgl.ai/wheels/repo.html"
 ]
